--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "krosmaga-hub",
   "version": "1.0.0",
   "description": "Le hub de Krosmaga !",
-  "main": "server.js",
+  "main": "src/server.js",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "npx nodemon server.js",
-    "format": "npx prettier --write server.js public/script.js",
+    "start": "node src/server.js",
+    "format": "npx prettier --write src/server.js public/script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
