--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "krosmaga-hub",
   "version": "1.0.0",
   "description": "Le hub de Krosmaga !",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": "node src/server.js",
-    "format": "npx prettier --write src/server.js public/script.js",
+    "start": "node src/index.js",
+    "format": "npx prettier --write src public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
