--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
