--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
   "scripts": {
     "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "format": "npx prettier --write src public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
