--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7"
   },
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "format": "npx prettier --write src public",
+    "format": "prettier --write src public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
